[package]
name = "iracing-scheduler-server"
version = "0.1.0"
edition = "2021"
authors = ["David Zemon <david@zemon.name>"]
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.5.1"
log = "0.4.17"
serde_json = "1.0.81"
simple_logger = "2.1.0"
tokio = "1.18.2"
